# maap-tropess-deploy

./: dotenv-example  environment.yml  pyproject.toml  requirements.txt
muses-data-ingest/: process.cwl
py-tropess/: process.cwl
tropess_deploy/cmd/: build_applications.py  trigger_app.py
tropess_deploy/maap/: tool.py
