[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "maap-tropess-deploy"
authors = [
  { name = "James McDuffie", email = "James.McDuffie@jpl.nasa.gov" },
]
description="TROPESS MAAP Deployment Deployment and Operations Tools"
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
build_applications = "tropess_deploy.cmd.build_applications:main"
init_data_services = "tropess_deploy.cmd.init_data_services:main"
trigger_app = "tropess_deploy.cmd.trigger_app:main"
query_data = "tropess_deploy.cmd.query_data:main"